@@ -149,7 +149,7 @@ TIGHTDB_TABLE_IMPL_2(PeopleTable2,
 
     // Load a transaction from disk (and print contents)
     TDBTransaction *fromDisk = [TDBTransaction groupWithFile:@"employees.tightdb" error:nil];
-    PeopleTable *diskTable = [fromDisk getTableWithName:@"employees" asTableClass:[PeopleTable class]];
+    PeopleTable *diskTable = [fromDisk tableWithName:@"employees" asTableClass:[PeopleTable class]];
 
     [diskTable addName:@"Anni" Age:54 Hired:YES];
 
@@ -166,7 +166,7 @@ TIGHTDB_TABLE_IMPL_2(PeopleTable2,
 
     // Load a transaction from memory (and print contents)
     TDBTransaction *fromMem = [TDBTransaction groupWithBuffer:buffer error:nil];
-    PeopleTable *memTable = [fromMem getTableWithName:@"employees" asTableClass:[PeopleTable class]];
+    PeopleTable *memTable = [fromMem tableWithName:@"employees" asTableClass:[PeopleTable class]];
     for (size_t i = 0; i < [memTable rowCount]; i++) {
         PeopleTableRow *row = [memTable rowAtIndex:i];
         NSLog(@"%zu: %@", i, row.Name);
